--- a/index.html
+++ b/index.html
@@ -61,16 +61,9 @@
 
         <input type="radio" name="rating" id="btn-5" class="rating-btn" value="5">
         <label for="btn-5" class="rating-value">5</label>
-
-        <!-- <button type="radio" class="rating-btn" type="button">1</button>
-        <button type="radio" class="rating-btn" type="button">2</button>
-        <button type="radio" class="rating-btn" type="button">3</button>
-        <button type="radio" class="rating-btn" type="button">4</button>
-        <button type="radio" class="rating-btn" type="button">5</button> -->
       </div>
 
       <input type="submit" value="SUBMIT" class="submit-btn">
-      <!-- <button class="submit-btn" type="submit">SUBMIT</button> -->
     </form>
 
   </div>
@@ -79,7 +72,7 @@
     <!-- Thank you state start -->
   <div id="thank-you-state-section"  class="main-container">
     <div id="submitted-img">
-      <img src="../images/illustration-thank-you.svg" alt="thank-you">
+      <img src="./images/illustration-thank-you.svg" alt="thank-you">
     </div>
     <div id="user-rating-container">
       <p class="user-rating-text">You selected
@@ -103,7 +96,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/Kevin27j">Kevin27j</a>.
   </div>
 </body>
 
