--- a/index.html
+++ b/index.html
@@ -47,7 +47,28 @@
     
     <form id="rating-container">
       <div class="rating-numbers">
-        <input type="radio" name="rating" id="btn-1" class="rating-btn" value="1" placeholder="1">
+        <label for="btn-1" class="rating-value">
+          <input type="radio" name="rating" id="btn-1" class="rating-btn" value="1">
+          <span>1</span>
+        </label>
+        <label for="btn-2" class="rating-value">
+          <input type="radio" name="rating" id="btn-2" class="rating-btn" value="2">
+          <span>2</span>
+        </label>
+        <label for="btn-3" class="rating-value">
+          <input type="radio" name="rating" id="btn-3" class="rating-btn" value="3">
+          <span>3</span>
+        </label>
+        <label for="btn-4" class="rating-value">
+          <input type="radio" name="rating" id="btn-4" class="rating-btn" value="4">
+          <span>4</span>
+        </label>
+        <label for="btn-5" class="rating-value">
+          <input type="radio" name="rating" id="btn-5" class="rating-btn" value="5">
+          <span>5</span>
+        </label>
+        
+        <!-- <input type="radio" name="rating" id="btn-1" class="rating-btn" value="1">
         <label for="btn-1" class="rating-value">1</label>
 
         <input type="radio" name="rating" id="btn-2" class="rating-btn" value="2">
@@ -60,7 +81,7 @@
         <label for="btn-4" class="rating-value">4</label>
 
         <input type="radio" name="rating" id="btn-5" class="rating-btn" value="5">
-        <label for="btn-5" class="rating-value">5</label>
+        <label for="btn-5" class="rating-value">5</label> -->
       </div>
 
       <input type="submit" value="SUBMIT" class="submit-btn">
@@ -94,10 +115,10 @@
 
   <!-- Rating state end -->
 
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://www.frontendmentor.io/profile/Kevin27j">Kevin27j</a>.
-  </div>
+  </footer>
 </body>
 
 </html>
