update file structure and README file w/ screenshots

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet">
 
-  <title>Frontend Mentor | Interactive rating component</title>
+  <title>Interactive rating component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -68,20 +68,6 @@
           <span>5</span>
         </label>
         
-        <!-- <input type="radio" name="rating" id="btn-1" class="rating-btn" value="1">
-        <label for="btn-1" class="rating-value">1</label>
-
-        <input type="radio" name="rating" id="btn-2" class="rating-btn" value="2">
-        <label for="btn-2" class="rating-value">2</label>
-
-        <input type="radio" name="rating" id="btn-3" class="rating-btn" value="3">
-        <label for="btn-3" class="rating-value">3</label>
-
-        <input type="radio" name="rating" id="btn-4" class="rating-btn" value="4">
-        <label for="btn-4" class="rating-value">4</label>
-
-        <input type="radio" name="rating" id="btn-5" class="rating-btn" value="5">
-        <label for="btn-5" class="rating-value">5</label> -->
       </div>
 
       <input type="submit" value="SUBMIT" class="submit-btn">
